tests/whole_screen/snapshots/whole_screen__fast_panel_sign_in_ascii_40.snap
---
source: tests/whole_screen/main.rs
expression: picture
---
40x24 cursor 22,0 scrolled 0
|CRUCIBLE                                |
|/.../workspace                          |
|                                        |
|> /fast                                 |
|                                        |
|                                        |
|                                        |
|                                        |
|                                        |
|                                        |
|                                        |
|                                        |
|----------------------------------------|
|                                        |
|Speed - openai - gpt-5.6-sol - OpenAI si|
|                                        |
|> Standard                              |
|  The standard price and speed          |
|                                        |
|  Fast                                  |
|  2.5x your plan's usage; 2x purchase...|
|                                        |
|enter to choose - esc to cancel         |
|                                        |
