tests/whole_screen/snapshots/whole_screen__fast_panel_sign_in_ascii_80.snap
---
source: tests/whole_screen/main.rs
expression: picture
---
80x24 cursor 23,0 scrolled 0
|| No recent sessions                                                          |||
||                                                                             |||
|| --------------------------------------------------------------------------- |||
||                                                                             |||
|| Tips                                                                        |#|
||                                                                             |#|
|| - /          opens the command list                                         |#|
|| - \ enter    adds a line without sending                                    |#|
|| - shift+tab  steps the permission mode                                      |#|
|| - ctrl+c     clears the line typed so far                                   |#|
|+-----------------------------------------------------------------------------+#|
|                                                                               #|
|> /fast                                                                        *|
|--------------------------------------------------------------------------------|
|                                                                                |
|Speed - openai - gpt-5.6-sol - ChatGPT sign-in                                  |
|                                                                                |
|> Standard                                                                      |
|  The standard price and speed                                                  |
|                                                                                |
|  Fast                                                                          |
|  2.5x your plan's usage; 2x purchased credits - 1.5x faster                    |
|                                                                                |
|enter to choose - esc to cancel                                                 |
