tests/whole_screen/snapshots/whole_screen__fast_panel_sign_in_unicode_40.snap
---
source: tests/whole_screen/main.rs
assertion_line: 3568
expression: picture
---
40x24 cursor 23,0 scrolled 0
|CRUCIBLE                                |
|/…/workspace                            |
|                                        |
|› /fast                                 |
|                                        |
|                                        |
|                                        |
|                                        |
|                                        |
|                                        |
|                                        |
|                                        |
|                                        |
|────────────────────────────────────────|
|                                        |
|Speed · openai · gpt-5.6-sol · ChatGPT s|
|                                        |
|› Standard                              |
|  The standard price and speed          |
|                                        |
|  Fast                                  |
|  2.5x your plan's usage; 2x purchased …|
|                                        |
|enter to choose · esc to cancel         |
