tests/whole_screen/snapshots/whole_screen__five_waiting_prompts_stand_in_one_panel_over_the_box.snap
---
source: tests/whole_screen/main.rs
assertion_line: 1069
expression: steadied_picture(&window.picture())
---
80x24 cursor 21,4 scrolled 0
|                                                                               │|
|● Bash(sleep 30)                                                               │|
|  ⎿ (no output yet) (+2 lines · ctrl+o to expand)                              │|
|                                                                               │|
|It is started. That is all.                                                    ●|
|                                                                               ┃|
|✳ writing (0s · ↓ 4 · esc to interrupt)                                         |
|────────────────────────────────────────────────────────────────────────────────|
|                                                                                |
|5 queued · ctrl+enter to send all now                                           |
|                                                                                |
|› and add a test for the windows path                                           |
|                                                                                |
|  then run the whole gate                                                       |
|                                                                                |
|  check the ascii glyphs too                                                    |
|                                                                                |
|↑↓ to walk · ctrl+e to edit · ctrl+x to delete · ctrl+s to send now             |
|                                                                                |
|                                                                 99% window left|
|╭──────────────────────────────────────────────────────────────────────────────╮|
|│ ›                                                                            │|
|╰──────────────────────────────────────────────────────────────────────────────╯|
|ask mode on (shift+tab to cycle) · 1 command           anthropic · claude-test-1|
