tests/whole_screen/snapshots/whole_screen__google_api_key_login_80.snap
---
source: tests/whole_screen/main.rs
assertion_line: 1705
expression: login
---
80x24 cursor 21,4 scrolled 0
|│                                                                             ││|
|│ · /          opens the command list                                         ││|
|│ · \ enter    adds a line without sending                                    ││|
|│ · shift+tab  steps the permission mode                                      ││|
|│ · ctrl+c     clears the line typed so far                                   ││|
|╰─────────────────────────────────────────────────────────────────────────────╯│|
|                                                                               ┃|
|                                                                               ┃|
|Warning: No models available. Use /login or set an API key environment         ┃|
|variable. Then use /model to select a model.                                   ┃|
|                                                                               ┃|
|› /login google                                                                ┃|
|────────────────────────────────────────────────────────────────────────────────|
|                                                                                |
|Log in                                                                          |
|                                                                                |
|› Google — provide your own API key                                             |
|                                                                                |
|Paste or type the key. It goes to crucible's protected store and is never shown.|
|                                                                                |
|╭── Google API key ────────────────────────────────────────────────────────────╮|
|│ ›                                                                            │|
|╰──────────────────────────────────────────────────────────────────────────────╯|
|paste or type your API key · esc to cancel                                      |
