tests/whole_screen/snapshots/whole_screen__google_model_effort_40.snap
---
source: tests/whole_screen/main.rs
expression: models
---
40x24 cursor 4,16 scrolled 0
|› /model                               ┃|
|Model             now  nothing asked yet|
|                                        |
|╭──────────────────────────────────────╮|
|│ Search  gemini                       │|
|╰──────────────────────────────────────╯|
|                                        |
|╭──────────────────────────────────────╮|
|│  ‹All› · Anthropic · DeepSeek · Googl│|
|├──────────────────────────────────────┤|
|│ › gemini-3.8-flash     1.0M  fast    │|
|│   gemini-3.7-flash     1.0M  fast    │|
|│   gemini-3.6-flash     1.0M  fast    │|
|│   gemini-3.1-pro-prev  1.0M  fast    │|
|│                                      │|
|│                                      │|
|│                                      │|
|│                                      │|
|│                                      │|
|╰──────────────────────────────────────╯|
|                                        |
|  Effort   ‹ low ›  medium   high       |
|                                        |
|  tab · ↑↓ · ←→ · enter · esc           |
