tests/whole_screen/snapshots/whole_screen__google_model_effort_80.snap
---
source: tests/whole_screen/main.rs
expression: models
---
80x24 cursor 4,16 scrolled 0
|› /model                                                                        |
|Model                                                     now  nothing asked yet|
|                                                                                |
|╭──────────────────────────────────────────────────────────────────────────────╮|
|│ Search  gemini                                                               │|
|╰──────────────────────────────────────────────────────────────────────────────╯|
|                                                                                |
|╭─────────────────────┬────────────────────────────────────────────────────────╮|
|│  Providers          │  Models                                        4 of 42 │|
|├─────────────────────┼────────────────────────────────────────────────────────┤|
|│ › All             4 │ › gemini-3.8-flash         Google        1.0M  fast    │|
|│   Anthropic       · │   gemini-3.7-flash         Google        1.0M  fast    │|
|│   DeepSeek        · │   gemini-3.6-flash         Google        1.0M  fast    │|
|│   Google          4 │   gemini-3.1-pro-preview   Google        1.0M  fast    │|
|│   Meta            · │                                                        │|
|│   MiMo            · │                                                        │|
|│   MiniMax         · │                                                        │|
|│   MoonshotAI      · │                                                        │|
|╰─────────────────────┴────────────────────────────────────────────────────────╯|
|                                                                                |
|  Effort   ‹ low ›  medium   high                                               |
|                                                                                |
|  tab pane · ↑↓ model · ←→ effort · enter takes both · esc to cancel            |
|                                                                                |
